<resources>
    <string name="app_name">Fun Math</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">FUN MATH</string>
    <string name="date"> 8 Mei 2017 </string>
    <string name="website">Materi dan Latihan</string>
    <string name="materi"> Materi </string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="bab"> Bab </string>

    <string-array name="leaderboard_kategori">
        <item> peringkat </item>
        <item> username </item>
        <item> score </item>
        <item> icon </item>
    </string-array>

    <string-array name="leaderboard_peringkat">
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
        <item> 6 </item>
        <item> 7 </item>
        <item> 8 </item>
        <item> 9 </item>
        <item> 10 </item>
    </string-array>

    <string-array name="leaderboard_username">
        <item> 13rot4ut1 </item>
        <item> DreaLot12 </item>
        <item> RhoRhonda00 </item>
        <item> 1Leotitu1 </item>
        <item> 123Willard321 </item>
        <item> gibBuz </item>
        <item> MarkMark21 </item>
        <item> 88Eight88 </item>
        <item> [] </item>
        <item> 1blank1 </item>
    </string-array>

    <string-array name="leaderboard_score">
        <item> 160 </item>
        <item> 160 </item>
        <item> 150 </item>
        <item> 120 </item>
        <item> 120 </item>
        <item> 100 </item>
        <item> 90 </item>
        <item> 80 </item>
        <item> 80 </item>
        <item> 70 </item>
    </string-array>

    <string-array name="leaderboard_icon">
        <item> naik </item>
        <item> turun </item>
        <item> naik </item>
        <item> turun </item>
        <item> naik </item>
        <item> turun </item>
        <item> turun </item>
        <item> naik </item>
        <item> naik </item>
        <item> naik </item>
    </string-array>

    <string-array name="sd_class_expandable_drawer">
        <item> Kelas 1 </item>
        <item> Kelas 2 </item>
        <item> Kelas 3 </item>
        <item> Kelas 4 </item>
        <item> Kelas 5 </item>
        <item> Kelas 6 </item>
    </string-array>

    <string-array name="kelas1_item_array">
        <item> Bilangan Cacah </item>
        <item> Lambang Bilangan </item>
        <item> Urutan Bilangan </item>
        <item> Pola Bilangan </item>
        <item> Bangun Datar </item>
        <item> Bangun Ruang </item>
        <item> Panjang, Berat, dan Waktu </item>
    </string-array>

    <string-array name="kelas2_item_array">
        <item> Makna Lambang Bilangan </item>
        <item> Membandingkan dan Mengurutkan Bilangan </item>
        <item> Penjumlahan dan Pengurangan </item>
        <item> Perkalian dan Pembagian </item>
        <item> Uang </item>
        <item> Satuan Baku </item>
        <item> Pecahan </item>
    </string-array>

    <string-array name="kelas3_item_array">
        <item> Sifat Operasi Hitung </item>
        <item> Garis Bilangan </item>
        <item> Operasi Hitung Pada Pecahan </item>
        <item> Satuan Tidak Baku </item>
        <item> Simetri </item>
        <item> Keliling Bangun Datar </item>
        <item> Sudut </item>
    </string-array>

    <string-array name="kelas4_item_array">
        <item> Pecahan Senilai </item>
        <item> Desimal dan Persen </item>
        <item> Faktor dan Kelipatan </item>
        <item> Bilangan Prima </item>
        <item> FPB dan KPK </item>
        <item> Pembulatan </item>
        <item> Segi Banyak </item>
    </string-array>

    <string-array name="kelas5_item_array">
        <item> Pangkat dan Akar </item>
        <item> Operasi Hitung Pecahan </item>
        <item> Jarak, Waktu, dan Kecepatan </item>
        <item> Posisi Benda Terhadap Mata Angin </item>
        <item> Volume </item>
    </string-array>

    <string-array name="kelas6_item_array">
        <item> Bilangan Bulat Negatif </item>
        <item> Operasi Hitung Pada Bilangan Negatif </item>
        <item> Lingkaran </item>
        <item> Diagonal Bidang dan Ruang </item>
        <item> Ukuran Pemusatan Data Tunggal </item>
    </string-array>

    <string-array name="smpsma_class_expandable_drawer">
        <item> Kelas 1 </item>
        <item> Kelas 2 </item>
        <item> Kelas 3 </item>
    </string-array>

    <string-array name="kelas7_item_array">
        <item> Bilangan </item>
        <item> Aljabar </item>
        <item> Pertidaksamaan Linear </item>
        <item> Himpunan </item>
        <item> Garis dan Sudut </item>
    </string-array>

    <string-array name="kelas8_item_array">
        <item> Relasi dan Fungsi </item>
        <item> SPLDV </item>
        <item> Teorema Pythagoras </item>
        <item> Lingkaran </item>
        <item> Kubus, Balok, Limas, dan Prisma </item>
    </string-array>

    <string-array name="kelas9_item_array">
        <item> Kesebangunan </item>
        <item> Tabung, Kerucut, dan Bola </item>
        <item> Statistika </item>
        <item> Peluang </item>
        <item> Barisan dan Deret </item>
    </string-array>

    <string-array name="school_array_acc_type">
        <item> SD </item>
        <item> SMP </item>
        <item> SMA </item>
    </string-array>

    <string-array name="grade_array_acc_type_SD">
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
        <item> 6 </item>
    </string-array>

    <string-array name="grade_array_acc_type_SMP_SMA">
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
    </string-array>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Pengaturan</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Account</string>

    <string name="settings_summary">$1</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Default</string>

    <string name="pref_title_add_friends_to_messages">Permintaan pertemanan</string>
    <string-array name="pref_example_list_titles">
        <item>Otomatis</item>
        <item>Menunggu konfirmasi</item>
        <item>Tidak pernah</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Tampilan</string>

    <string name="pref_title_sync_frequency">Bahasa</string>
    <string-array name="pref_sync_frequency_titles">
        <item>Bahasa Indonesia</item>
        <item>English (UK)</item>
        <item>English (USA)</item>
        <item>Deutch</item>
        <item>Chinese simplified</item>
        <item>Chinese traditional</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">Sinkronisasi pengaturan dan akun</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Pemberitahuan</string>

    <string name="pref_title_new_message_notifications">Pemberitahuan baru</string>

    <string name="pref_title_ringtone">Nada bunyi</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Getaran</string>
    <string name="title_activity_main5">Main5Activity</string>
</resources>
