<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.ancovy.funmath.activity.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.ancovy.funmath.activity.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_smartphone_black_24dp"
        android:title="@string/pref_header_data_sync" />

    <header
        android:fragment="com.ancovy.funmath.activity.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

</preference-headers>
